# StrategyGame

./: .gitignore
StrategyGame/: CMakeLists.txt  CMakePresets.json
StrategyGame/headers/: GameEngineCore.hpp  IMessageGetter.h  MessageQueue.hpp  MessageReceiver.hpp  StrategyGame.h
StrategyGame/protobuf_definitions/: CMakeLists.txt  CloseEngineCommand.proto  CloseEngineCommandAck.proto  InitBoardReq.proto  InitBoardResp.proto  ReqWrapper.proto  StartEngine.proto
StrategyGame/source/: CMakeLists.txt  GameEngineCore.cpp  MessageQueue.cpp  MessageReceiver.cpp  StrategyGame.cpp
StrategyGame/src/: main.cpp
StrategyGame/src/events/: EventStartEngine.hpp
StrategyGame/src/gameEngine/: GameBoardField.cpp  GameBoardField.h  GameContext.cpp  GameContext.hpp  GameEngineCore.cpp  GameEngineCore.hpp  GamePiece.h  Rng.hpp
StrategyGame/src/headers/: EventCloseEngine.hpp  EventMessageArrival.hpp  GameEngineCore.hpp  IMessagePusher.h  Init.hpp  InitializeBoard.hpp  MessageQueue.hpp  MessageReceiver.hpp
StrategyGame/src/messageQueue/: MessageQueue.cpp  MessageQueue.hpp
StrategyGame/src/messageReceiver/: MessageReceiver.hpp
StrategyGame/src/source/: GameEngineCore.cpp  Init.cpp  MessageQueue.cpp  StrategyGame.cpp
StrategyGame/src/source/source/: GameEngineCore.cpp  MessageQueue.cpp  MessageReceiver.cpp  StrategyGame.cpp
StrategyGame/src/states/: Init.cpp  Init.hpp  InitializeBoard.cpp  InitializeBoard.hpp
StrategyGame/tests/: CMakeLists.txt  GameBoardFieldTests.cpp  GameEngineTests.cpp  MessageQueueMock.hpp  MessageQueueTests.cpp  MessageReceiverTests.cpp  sampleTest.cpp
